--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lake Cabin Finder</title>
+    <title>Lake Cabins</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -27,7 +27,7 @@
             "Distance from Home", "Lake", "Lake Depth", "Frontage", "Beach", "Lake Bottom",
             "Swimming Depth", "Dock Condition", "Dock/Lift Included", "Backyard Slope",
             "Cabin Condition", "Bedrooms", "Bathrooms", "Kitchen", "Living Area", "Loft",
-            "Fireplace", "Seasonal/Year Round", "Garage", "Backlot", "Lot size",
+            "Fireplace", "Seasonal/Year Round", "Garage / Outdoor Storage", "Backlot", "Lot size",
             "Lot side of Lake", "Included Furnishings/Toys"
           ];
 
@@ -40,7 +40,7 @@
             "Lake Bottom": "Hard",
             "Swimming Depth": "Three feet at Dock",
             "Backyard Slope": "Moderate",
-            "Cabin Condition": "needs almost nothing",
+            "Cabin Condition": "Needs Almost Nothing",
             "Bedrooms": "Two",
             "Bathrooms": "One",
             "Lot side of Lake": "North, East"
