--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
             <div className="min-h-screen bg-gradient-to-br from-slate-50 via-blue-50 to-teal-50 p-8">
               <div className="max-w-7xl mx-auto">
                 <div className="text-center mb-12">
-                  <h1 className="text-6xl font-black text-slate-800 mb-4">Lake Cabin</h1>
-                  <p className="text-xl text-slate-600 mb-6">Score and compare lake cabins</p>
+                  <h1 className="text-4xl font-black text-slate-800 mb-4">Lake Cabins</h1>
+                  <p className="text-6xl text-slate-600 mb-6">Score and compare lake cabins</p>
                 </div>
 
                 <button onClick={addCabin} className="w-full mb-6 py-4 bg-gradient-to-r from-teal-600 to-blue-600 text-white rounded-xl hover:from-teal-700 hover:to-blue-700 shadow-lg flex items-center justify-center gap-3 text-lg font-bold">
